# bz2_ex

./: .gitignore  README.md  mix.exs
.cargo/: config.toml
.woodpecker/: bsd.yml  darwin.yml  linux.yml  release.yml  test.yml
lib/: bz2_ex.ex
lib/bz2_ex/: error.ex  native.ex  stream.ex
native/bz2_ex/: Cargo.toml
native/bz2_ex/src/: lib.rs
test/: bz2_ex_test.exs
test/bz2_ex/: stream_test.exs
